<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hummingbird</string>

    <string name="hummingbird_slogan">Track, share and discover new anime!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- Generic Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="adding">Adding</string>
    <string name="loading">Loading</string>
    <string name="loading_more">Loading more</string>
    <string name="updating">Updating</string>
    <string name="removing">Removing</string>
    <string name="please_wait___">Please wait…</string>
    <string name="just_now">Just now</string>
    <string name="to">to</string>
    <string name="retry">Retry</string>
    <string name="more">more</string>
    <string name="less">less</string>

    <!-- Titles -->
    <string name="title_feed">Feed</string>
    <string name="title_info">Info</string>
    <string name="title_profile">Profile</string>
    <string name="title_library">Library</string>
    <string name="title_timeline">Timeline</string>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="search_anime">Search Anime</string>


    <!--  Anime Details Strings -->
    <string name="action_copy_title">Copy Title</string>
    <string name="action_read_more">Read more</string>
    <string name="toast_copy_title"> Copied</string>
    <string name="action_share">Share</string>
    <string name="action_remove">Remove</string>
    <string name="content_favorited">Favorited</string>
    <string name="content_episodes">Episodes</string>
    <string name="content_private">Private</string>
    <string name="content_rewatching">Rewatching</string>
    <string name="content_rewatched">Rewatched</string>
    <string name="content_rating">Rating</string>
    <string name="content_my_rating">My rating</string>
    <string name="title_remove">Remove</string>
    <string name="content_remove_are_you_sure">Are you sure you\'d like to remove {anime-name} from your library?</string>
    <string name="content_not_yet_aired">Not Yet Aired</string>
    <string name="content_not_yet_rated">Not Yet Rated</string>
    <string name="content_airing_since">Airing since</string>
    <string name="content_will_air_on">Will air on</string>
    <string name="content_will_start_airing_on">Will start airing on</string>
    <string name="content_sharing_text">Check out {anime-name} at Hummingbird! {anime-url}</string>

    <!-- Programatically -->
    <string name="finish_date">Still Airing</string>

    <!-- Content -->
    <string name="content_view_trailer">View Trailer</string>
    <string name="content_add_to_list">Add To Library</string>
    <string name="content_update">Update</string>
    <string name="content_type">Type</string>
    <string name="content_genre">Genre</string>
    <string name="content_episode_count">Episode Count</string>
    <string name="content_episode_duration">Episode Duration</string>
    <string name="content_age_rating">Age Rating</string>
    <string name="content_aired">Aired</string>
    <string name="content_minutes">Minutes</string>
    <string name="content_community_rating">Community Rating</string>

    <!-- Content (Feed) Strings -->
    <string name="content_watched_episode">watched episode</string>
    <string name="content_is_planning_to_watch">is planning to watch</string>
    <string name="content_has_completed">has completed</string>
    <string name="content_has_dropped">has dropped</string>
    <string name="content_has_placed_on_hold">has placed on hold</string>
    <string name="content_is_currently_watching">is currently watching</string>

    <!-- Content (Login) Strings -->
    <string name="content_username">Username</string>
    <string name="content_password">Password</string>
    <string name="content_login">Log In</string>
    <string name="content_log_out">Log Out</string>

    <!-- Content (Profile) Strings-->
    <string name="content_favorites">favorites</string>
    <string name="content_favorite_anime">favorite anime</string>
    <string name="content_online">online</string>

    <!-- Content (Library) Strings -->
    <string name="content_library_all">All</string>
    <string name="content_library_watching">Watching</string>
    <string name="content_library_planned">Planned</string>
    <string name="content_library_completed">Completed</string>
    <string name="content_library_on_hold">On Hold</string>
    <string name="content_library_dropped">Dropped</string>
    <string name="content_library_watching_at">Watching at</string>
    <string name="content_library_rewatching_at">Rewatching at</string>
    <string name="content_library_planning_to_watch">Planning To Watch</string>

    <string name="content_help">Need help?</string>
    <string name="content_new">Create an account</string>

    <string name="error">Error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_invalid_credentials">The username or password you entered is incorrect.</string>
    <string name="error_connection">Connection error</string>
    <string name="error_failed_to_connect">Failed to connect!</string>
    <string name="error_cant_connect_to_server">Can\'t connect to Hummingbird servers!</string>
    <string name="error_gateway_timeout">Gateway time-out!</string>
    <string name="error_cant_load_data">Can\'t load data!</string>
    <string name="error_cant_load_image">Can\'t load image!</string>
    <string name="error_cant_remove_item">Can\'t remove item!</string>
    <string name="error_couldnt_update_item">Couldn\'t update item!</string>
    <string name="error_couldnt_add_item">Couldn\'t add item!</string>
    <string name="error_no_results_found_for">No results found for \"{query}\"</string>

    <string name="info_successfully_updated">Updated {anime-name}!</string>

    <string name="content_are_you_sure_logout">Are you sure you\'d like to log out? This will erase
        all stored data.</string>

    <string name="content_unknown">Unknown</string>

    <!-- Navigation Drawer -->
    <string-array name="list_main_strings">
        <item>Timeline</item>
        <item>Library</item>
        <item>Not Decided</item>
    </string-array>
    <string-array name="list_secondary_strings">
        <item>Settings</item>
        <item>Log Out</item>
    </string-array>

    <!-- Library Entry status items -->
    <string-array name="library_watch_status_items">
        <item>Currently Watching</item>
        <item>Plan To Watch</item>
        <item>Completed</item>
        <item>On Hold</item>
        <item>Dropped</item>
    </string-array>
</resources>
